fix some layout problems

--- a/src/assets/stylesheets/components/settings_dropdown.scss
+++ b/src/assets/stylesheets/components/settings_dropdown.scss
@@ -3,12 +3,13 @@
 }
 
 .settings-dropdown__dropdown {
-  position: absolute;
+  min-height: 100%;
+  max-height: 600px;
   min-width: 220px;
   z-index: 10;
+  position: absolute;
   right: 0;
   background-color: #fff;
-  max-height: 600px;
   overflow-y: scroll;
 }
 
